# monitoring-api

./: .env  .gitignore  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
src/: main.py
src/application/dto/: base_dto.py
src/application/dto/requests/: monitoring.py  sensor.py
src/application/dto/responses/: monitoring.py
src/application/exceptions/: base_exception.py  conflict.py  error_factory.py  forbidden.py  not_found_error.py  unauthorized.py  validation.py
src/application/services/: __init__.py  monitoring_service.py
src/domain/models/: monitoring.py
src/domain/repositories/: monitoring_repository_interface.py
src/infra/messengers/mqtt/: llistener.py
src/infra/persistence/: database_setup.py
src/infra/persistence/models/: __init__.py  monitoring.py
src/infra/persistence/repository/: monitoring_repository.py
src/infra/services/: mqtt_handler_infra_service.py
src/presentation/: exception_handler.py  fastapi_setup.py
src/presentation/routers/: monitoring_router.py
src/utils/: init_services.py  logging.py
